# noteme

./: .gitignore  .pre-commit-config.yaml  TODO.md  setup.cfg  todo.md  todome.md  tox.ini
src/noteme/: main.py  noteme.md
src/todome/: main.py
tests/: main_test.py
todome/: main.py
