[metadata]
name = noteme
version = 1.0.0
description = Alter your notes anywhere in your terminal
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
install_requires =
    wheel
setup_requires =
    wheel
package_dir =
    = src
packages = find:
python_requires = >=3.6.13

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    noteme = noteme.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
