[metadata]
name = noteme
version = 1.0.0
description = Alter your notes anywhere in your terminal
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    wheel
python_requires = >=3.6
package_dir =
    = src
setup_requires =
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    noteme = noteme.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
