[metadata]
name = todome
version = 1.0.0
description = CRUD your local or global TODO.md file.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/oprince-tech/todome
author = Oliver Prince
author_email = oprince.tech@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    wheel
python_requires = >=3.6
package_dir =
    = ./todome
setup_requires =
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    todome = todome.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
